WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
34304
Fix valueAsNumber calculation for type=month.
https://bugs.webkit.org/show_bug.cgi?id=34304
Summary
Fix valueAsNumber calculation for type=month.
Kent Tamura
Reported
2010-01-28 21:07:55 PST
Fix valueAsNumber calculation for type=month.
Attachments
Patch
(11.53 KB, patch)
2010-01-28 21:15 PST
,
Kent Tamura
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Kent Tamura
Comment 1
2010-01-28 21:15:14 PST
Created
attachment 47671
[details]
Patch
Kent Tamura
Comment 2
2010-01-31 17:57:50 PST
Landed as
r54120
<
http://trac.webkit.org/changeset/54120
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug